view saved puzzles

--- a/ai-reasoning-task-generator/frontend/index.html
+++ b/ai-reasoning-task-generator/frontend/index.html
@@ -11,6 +11,10 @@
         <h1>🧩 AI Logic Puzzle Generator</h1>
         <p class="subtitle">Test your reasoning skills with AI-generated puzzles</p>
         
+        <div class="nav-links">
+            <a href="saved.html" class="saved-link">📚 View Saved Puzzles</a>
+        </div>
+        
         <button id="generateBtn" class="generate-btn">
             Generate Logic Puzzle
         </button>
